fix(gcp): Fiat batch queries on rate limit would randomly fail the entire operation and not retry appropriately.  Fixes how groups are pulled from GCP to really use rate limits AND retries appropriately at the expense of moving from batch logic